[package]
name = "login"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
ipc-userd = { path = "../userd/ipc-userd" }
rpassword = "7.3.1"
nix = { version = "0.29.0", default-features = false, features = [
    "user",
    "signal",
] }

logger = { version = "0.1.0", path = "../logger" }
ipc = { version = "0.1.0", path = "../ipc" }
