[package]
name = "login"
version = "0.1.0"
edition.workspace = true

[dependencies]
prelude.workspace = true
ipc.workspace = true
serviced.workspace = true
userd.workspace = true

rpassword.workspace = true
# TODO: Switch to rustix when it implements all the needed APIs
nix = { workspace = true, default-features = false, features = [
  "signal",
  "user",
  "term",
  "fs",
] }


[lints]
workspace = true
